CSRF protection, admin login

--- a/App/Views/admin/event-detail.html
+++ b/App/Views/admin/event-detail.html
@@ -7,7 +7,7 @@
     
     <div class="wrapper">
         
-        {% set headerVars = { 'logout': true, 'adminTitle': 'Administrace' } %}
+        {% set headerVars = { 'logout': true, 'adminTitle': 'Akce' } %}
         {% include 'admin/includes/header.html' with headerVars %}
 
         <main class="main main--index">
