--- a/App/Views/admin/login.html
+++ b/App/Views/admin/login.html
@@ -11,8 +11,8 @@
 
             <form class="login-form" action="/admin/login" method="POST">
                 <input class="login-form__input" type="password" name="password" placeholder="Přístupový kód">
-                <input class="login-form__input login-form__input--hidden" type="text" name="_csrf" value="<%= csrfToken %>">
-                <input type="submit" class="login-form__submit" value="Login">
+                <input class="login-form__input login-form__input--hidden" type="text" name="_csrf" value="{{ csrfToken }}">
+                <input type="submit" name="submit" class="login-form__submit" value="Login">
             </form>
             
         </main>
