--- a/App/Views/includes/cooperation.html
+++ b/App/Views/includes/cooperation.html
@@ -5,7 +5,7 @@
     <container class="cooperation__container">
         <div class="cooperation-way">
             <div class="cooperation-way__content">
-                <h4 class="heading-4">Rezonance</h4>
+                <h4 class="heading-4 heading-4--bold">Rezonance</h4>
                 <p class="paragraph-1">
                     Když to se nou rezonuje, když to s tebou rezonuje, přišel okamžik, kdy se můžeme setkat.
                 </p>
@@ -16,7 +16,7 @@
         </div>
         <div class="cooperation-way">
             <div class="cooperation-way__content">
-                <h4 class="heading-4">Dynamika skupiny</h4>
+                <h4 class="heading-4 heading-4--bold">Dynamika skupiny</h4>
                 <p class="paragraph-1">
                     V dynamice skupiny vidím obrovský potenciál, velkou sílu, obohacení a inspiraci pro rozvoj každého z nás. Miluji sdílení příběhů a propojování v bytostném naladění se
                     na život.                 
@@ -28,7 +28,7 @@
         </div>
         <div class="cooperation-way">
             <div class="cooperation-way__content">
-                <h4 class="heading-4">Instituce a organizace</h4>
+                <h4 class="heading-4 heading-4--bold">Instituce a organizace</h4>
                 <p class="paragraph-1">
                     Přicházím do institucí, organizací
                     a rodin. Vstupuji tam jako host.
@@ -41,7 +41,7 @@
         </div>
         <div class="cooperation-way">
             <div class="cooperation-way__content">
-                <h4 class="heading-4">Individuální konzultace</h4>
+                <h4 class="heading-4 heading-4--bold">Individuální konzultace</h4>
                 <p class="paragraph-1">
                     Kapacita pro individuální konzultace je naplněna, nové klienty v současné době nepřijímám.
                 </p>
