--- a/App/Views/includes/profile.html
+++ b/App/Views/includes/profile.html
@@ -1,12 +1,12 @@
 <section class="profile">
-  <svg
+  <!-- <svg
     class="profile__svg profile__svg--timber"
     viewBox="0 0 1468 40"
     fill="none"
     xmlns="http://www.w3.org/2000/svg"
   >
     <use xlink:href="#timber"></use>
-  </svg>
+  </svg> -->
   <img src="img/profile.jpg" alt="" class="profile__photo" />
   <div class="profile__text">
     <p class="paragraph-1">
