--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,7 +76,7 @@ a:link {
   letter-spacing: 2px;
   font-family: "Kalam", cursive;
   line-height: 5rem; }
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 850px) {
     .heading-3 {
       font-size: 3rem;
       line-height: 4rem; } }
@@ -89,7 +89,9 @@ a:link {
 
 .heading-4 {
   font-size: 2rem;
-  font-weight: bold; }
+  font-weight: normal; }
+  .heading-4--bold {
+    font-weight: bold; }
   @media screen and (max-width: 1100px) {
     .heading-4 {
       font-size: 2rem; } }
@@ -145,7 +147,7 @@ a:link {
       margin-bottom: 10rem; } }
   .cooperation-way .heading-4 {
     margin-bottom: 1rem; }
-    @media screen and (max-width: 900px) {
+    @media screen and (max-width: 800px) {
       .cooperation-way .heading-4 {
         text-align: center; } }
   .cooperation-way__text {
@@ -392,27 +394,38 @@ a:link {
     width: 100%;
     background-image: linear-gradient(180deg, rgba(159, 191, 115, 0) 0%, rgba(159, 191, 115, 0.1) 100%);
     position: absolute;
-    bottom: 0; }
+    bottom: 0;
+    left: 0; }
 
 .events {
   width: 100vw;
-  height: 100rem;
+  height: auto;
   padding-top: 12rem;
   background-image: url("../img/eventsBackground.svg");
   background-size: cover;
   overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: relative;
   z-index: 2; }
   @media only screen and (max-width: 1000px) {
     .events {
-      align-content: center;
-      flex-wrap: wrap; } }
+      background-image: linear-gradient(to right bottom, white, #f4f8ef); } }
+  .events__container {
+    height: 100%;
+    width: 100%;
+    padding: 20rem 15rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    z-index: 2; }
+    @media only screen and (max-width: 1000px) {
+      .events__container {
+        align-content: center;
+        flex-wrap: wrap; } }
   .events__event {
     width: 35rem;
     height: 25rem;
+    margin: 6rem 0;
     filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
     transform: translateY(-25%);
     position: relative;
@@ -420,25 +433,44 @@ a:link {
     @media only screen and (max-width: 1600px) {
       .events__event {
         width: 32rem; } }
+    @media only screen and (max-width: 1300px) {
+      .events__event {
+        width: 27rem; } }
     .events__event svg {
       width: 100%;
       height: 150%;
       fill: #ffffff; }
     .events__event__image {
       width: 75%;
+      height: 15rem;
       border-radius: 5px;
       transform: translate(-50%, -50%);
+      object-fit: cover;
+      object-position: center center;
       position: absolute;
       top: 6rem;
       left: 52%; }
     .events__event .heading-4 {
+      width: calc(100% - 8rem);
       position: absolute;
       top: 16rem;
       left: 5rem; }
+      @media only screen and (max-width: 1300px) {
+        .events__event .heading-4 {
+          width: calc(100% - 6rem);
+          font-size: 1.6rem;
+          left: 4rem; } }
     .events__event .paragraph-small {
+      width: calc(100% - 8rem);
       position: absolute;
       top: 26rem;
       left: 5rem; }
+      @media only screen and (max-width: 1300px) {
+        .events__event .paragraph-small {
+          width: calc(100% - 6rem);
+          top: 24rem;
+          left: 4rem;
+          font-size: 1.6rem; } }
 
 .footer {
   width: 100vw;
@@ -458,7 +490,7 @@ a:link {
   @media only screen and (max-width: 500px) {
     .footer {
       padding: 5rem; } }
-  @media only screen and (max-width: 500px) {
+  @media only screen and (max-width: 400px) {
     .footer {
       padding: 5rem 3rem; } }
   .footer__columns {
@@ -553,20 +585,6 @@ a:link {
       margin-bottom: -5rem; } }
   .header__svg {
     position: absolute; }
-    .header__svg--top {
-      fill: #9CBD6F;
-      height: 20rem;
-      width: 100%;
-      top: 0;
-      left: 0;
-      z-index: 1; }
-      @media screen and (max-width: 900px) {
-        .header__svg--top {
-          height: 15rem; } }
-      @media screen and (max-width: 800px) {
-        .header__svg--top {
-          background-color: #9CBD6F;
-          height: 10rem; } }
     .header__svg--bottom {
       fill: #9CBD6F;
       height: 30rem;
@@ -725,12 +743,12 @@ a:link {
       .organizations .heading-3 {
         top: 25rem; } }
   .organizations .heading-4 {
+    text-align: center;
     position: relative;
     z-index: 2; }
   .organizations__bg {
     height: 40rem;
-    background: #9CBD6F;
-    clip-path: url(#organizations-clip-path); }
+    background: #9CBD6F; }
     @media screen and (max-width: 500px) {
       .organizations__bg {
         height: 33rem; } }
@@ -742,38 +760,31 @@ a:link {
     @media only screen and (max-width: 1400px) {
       .organizations__container {
         padding: 0 15rem; } }
+    @media only screen and (max-width: 1100px) {
+      .organizations__container {
+        padding: 0 10rem;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center; } }
     @media screen and (max-width: 800px) {
       .organizations__container {
-        margin-top: 0;
-        padding-top: 20rem;
-        height: 55rem;
         position: relative; } }
-    @media screen and (max-width: 400px) {
+    @media screen and (max-width: 500px) {
       .organizations__container {
-        padding-top: 10rem; } }
+        padding: 0; } }
   .organizations__organization {
     width: 25rem;
+    flex-shrink: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     position: relative; }
-    @media screen and (max-width: 800px) {
+    @media only screen and (max-width: 1100px) {
       .organizations__organization {
-        height: 10rem;
-        width: 25rem; }
-        .organizations__organization:first-of-type {
-          position: absolute;
-          top: 35rem; } }
+        margin-bottom: 3rem; } }
     @media screen and (max-width: 500px) {
       .organizations__organization {
         height: 10rem; } }
-    @media screen and (max-width: 400px) {
-      .organizations__organization {
-        height: 10rem;
-        width: 20rem; }
-        .organizations__organization:first-of-type {
-          position: absolute;
-          top: 23rem; } }
     .organizations__organization:hover .organizations__waterlily {
       transform: translateY(0.5rem); }
   .organizations__wave {
@@ -816,7 +827,7 @@ a:link {
     .passedEvents {
       height: auto; } }
   .passedEvents__backgroundImage {
-    width: 65%;
+    width: calc(100% - 70rem);
     height: 100%;
     transform: scaleX(-1);
     object-fit: cover; }
@@ -936,20 +947,21 @@ a:link {
       background-color: transparent;
       cursor: pointer;
       transform: translate(-50%, -50%);
+      opacity: 0;
       color: #ffffff;
-      font-size: 2.5rem;
+      font-size: 2rem;
       text-transform: uppercase;
       font-weight: 400;
       letter-spacing: 2px;
       text-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
       position: absolute;
       bottom: -6rem;
-      left: 50%; }
+      left: 50%;
+      transition: all .3s; }
       .passedEvents__form__submit.hidden {
         display: none; }
 
 .profile {
-  margin-bottom: -4rem;
   background-image: linear-gradient(180deg, rgba(159, 191, 115, 0.1) 0%, rgba(129, 168, 76, 0.1) 100%);
   display: flex;
   justify-content: flex-end;
@@ -958,22 +970,25 @@ a:link {
     .profile {
       flex-direction: column; } }
   .profile__svg {
-    position: absolute; }
-    .profile__svg--timber {
-      width: calc(100% - 50rem);
-      right: 0;
-      top: 0;
-      transform: translateY(-1.5rem); }
-      @media screen and (max-width: 1100px) {
-        .profile__svg--timber {
-          width: 75%; } }
-      @media screen and (max-width: 800px) {
-        .profile__svg--timber {
-          display: none; } }
-      @media only screen and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-        .profile__svg--timber {
-          top: -45.3%;
-          right: 0.3%; } }
+    position: absolute;
+    /* &--timber {
+            width: calc(100% - 50rem);
+
+            right: 0;
+            top: 0;
+            transform: translateY(-1.5rem);
+
+            @media screen and (max-width: 1200px) {
+                width: calc(100% - 40rem);
+            }
+            @media screen and (max-width: $bp-profile-mobile) {
+                display: none;
+            }
+            @media only screen and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+                top: -45.3%;
+                right: 0.3%;
+            }
+        } */ }
     .profile__svg--root {
       width: 40%;
       height: 15rem;
@@ -987,84 +1002,90 @@ a:link {
           display: none; } }
   .profile__photo {
     width: 50rem;
-    height: 103%;
+    height: 110%;
     object-fit: cover;
     position: absolute;
-    left: 0%;
-    bottom: -.5%;
+    left: 15rem;
+    bottom: -5%;
     z-index: 3; }
+    @media screen and (max-width: 1600px) {
+      .profile__photo {
+        left: 10rem; } }
     @media screen and (max-width: 1200px) {
       .profile__photo {
-        width: 30rem;
-        height: 45rem;
-        top: 20rem; } }
-    @media screen and (max-width: 1100px) {
+        width: 40rem;
+        left: 0; } }
+    @media screen and (max-width: 1000px) {
       .profile__photo {
-        right: 75%; } }
+        width: 30rem;
+        height: 100%;
+        bottom: 0; } }
     @media screen and (max-width: 800px) {
       .profile__photo {
-        width: 40rem;
-        height: 60rem;
-        margin-left: auto;
-        margin-right: auto;
+        width: 100%;
+        height: auto;
+        padding: 10rem 7.5rem;
+        padding-bottom: 0;
         position: relative;
         right: unset;
         top: unset;
         transform: none;
         bottom: -4rem; } }
+    @media only screen and (max-width: 500px) {
+      .profile__photo {
+        padding: 7.5rem 5rem;
+        padding-bottom: 0; } }
     @media screen and (max-width: 450px) {
       .profile__photo {
-        bottom: 0;
-        width: 100%;
-        height: auto; } }
+        padding: 0; } }
+    @media only screen and (max-width: 400px) {
+      .profile__photo {
+        margin: 5rem 3rem; } }
   .profile__text {
-    width: calc(100% - 50rem);
-    height: 65rem;
+    width: calc(100% - 65rem);
+    min-height: 65rem;
     padding: 15rem 20rem;
     background-color: #ffffff;
     display: flex;
     flex-direction: column;
     justify-content: center; }
-    @media screen and (max-width: 1100px) {
+    @media screen and (max-width: 1600px) {
       .profile__text {
-        width: 75%; } }
+        width: calc(100% - 60rem);
+        padding: 15rem; } }
+    @media screen and (max-width: 1600px) {
+      .profile__text {
+        width: calc(100% - 60rem);
+        padding: 10rem 15rem; } }
+    @media screen and (max-width: 1200px) {
+      .profile__text {
+        width: calc(100% - 40rem);
+        height: 60rem;
+        padding: 10rem; } }
+    @media screen and (max-width: 1000px) {
+      .profile__text {
+        width: calc(100% - 30rem);
+        height: auto;
+        padding: 7.5rem; } }
     @media screen and (max-width: 800px) {
       .profile__text {
         width: 100%;
-        padding-top: 10rem;
-        padding-bottom: 10rem;
+        padding: 10rem 7.5rem;
         height: auto; } }
+    @media only screen and (max-width: 500px) {
+      .profile__text {
+        padding: 7.5rem 5rem; } }
+    @media only screen and (max-width: 400px) {
+      .profile__text {
+        padding: 5rem 3rem; } }
   .profile .paragraph-1 {
     width: 100%; }
-    @media screen and (max-width: 1400px) {
-      .profile .paragraph-1 {
-        margin-left: 25rem; } }
-    @media screen and (max-width: 1200px) {
-      .profile .paragraph-1 {
-        margin-left: 20rem; } }
-    @media screen and (max-width: 1000px) {
-      .profile .paragraph-1 {
-        width: 44rem; } }
-    @media screen and (max-width: 900px) {
-      .profile .paragraph-1 {
-        width: 38rem; } }
-    @media screen and (max-width: 800px) {
-      .profile .paragraph-1 {
-        width: 40rem;
-        margin-left: auto; } }
-    @media screen and (max-width: 450px) {
-      .profile .paragraph-1 {
-        width: 30rem; } }
-    @media screen and (max-width: 350px) {
-      .profile .paragraph-1 {
-        width: 25rem; } }
     .profile .paragraph-1:not(:last-child) {
       margin-bottom: 4rem; }
 
 .topics {
   width: 100vw;
   height: auto;
-  overflow: hidden;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -1076,18 +1097,13 @@ a:link {
   @media only screen and (max-width: 800px) {
     .topics {
       height: auto;
+      padding-right: 0;
       flex-direction: column;
       justify-content: center; } }
-  @media only screen and (max-width: 650px) {
-    .topics {
-      padding: 5rem; } }
-  @media only screen and (max-width: 550px) {
-    .topics {
-      padding: 2rem; } }
   .topics__svgTop {
     position: absolute;
-    right: 10%;
-    top: -20%;
+    right: 15%;
+    top: -22%;
     z-index: -1; }
     @media only screen and (max-width: 1400px) {
       .topics__svgTop {
@@ -1105,8 +1121,8 @@ a:link {
         display: none; } }
   .topics__svgBottom {
     position: absolute;
-    right: 0;
-    bottom: -35%;
+    right: 3%;
+    bottom: -44%;
     z-index: -1; }
     @media only screen and (max-width: 1400px) {
       .topics__svgBottom {
@@ -1124,14 +1140,16 @@ a:link {
   .topics__img__container {
     width: 450px;
     flex-shrink: 0; }
+    @media only screen and (max-width: 1100px) {
+      .topics__img__container {
+        width: 298px; } }
+    @media only screen and (max-width: 800px) {
+      .topics__img__container {
+        display: none; } }
   .topics__img__regular {
     width: 100%;
     height: 100%;
     object-fit: cover; }
-    @media only screen and (max-width: 1200px) {
-      .topics__img__regular {
-        width: 35rem;
-        height: 60rem; } }
     @media only screen and (max-width: 800px) {
       .topics__img__regular {
         display: none; } }
@@ -1140,21 +1158,33 @@ a:link {
         padding-right: 5rem; } }
   .topics__img__mobile {
     height: 100vw;
-    transform: rotate(270deg); }
+    transform: rotate(270deg);
+    transform-origin: center center;
+    object-fit: cover; }
     @media only screen and (min-width: 801px) {
       .topics__img__mobile {
         display: none; } }
   .topics__text {
     width: 100%;
     margin: 15rem 10rem; }
-    @media only screen and (max-width: 1050px) {
+    @media only screen and (max-width: 1350px) {
       .topics__text {
-        padding-left: 5rem; } }
+        margin: 10rem; } }
+    @media only screen and (max-width: 1100px) {
+      .topics__text {
+        margin: 0 5rem; } }
     @media only screen and (max-width: 800px) {
       .topics__text {
         width: 100%;
-        padding: 5rem;
+        padding: 10rem 7.5rem;
+        margin: 0;
         overflow-wrap: normal; } }
+    @media only screen and (max-width: 500px) {
+      .topics__text {
+        padding: 7.5rem 5rem; } }
+    @media only screen and (max-width: 400px) {
+      .topics__text {
+        padding: 5rem 3rem; } }
     @media only screen and (-ms-high-contrast: none), (-ms-high-contrast: active) {
       .topics__text {
         width: 100rem; } }
@@ -1184,19 +1214,22 @@ a:link {
   width: 100vw;
   padding: 15rem 20rem;
   overflow: hidden;
-  position: relative;
-  overflow: hidden; }
-  @media only screen and (max-width: 1200px) {
+  position: relative; }
+  @media only screen and (max-width: 1450px) {
     .way {
-      padding: 10rem;
-      padding-top: 0; } }
+      padding: 15rem; } }
+  @media only screen and (max-width: 1450px) {
+    .way {
+      padding: 15rem 10rem; } }
   @media only screen and (max-width: 800px) {
     .way {
-      padding: 5rem;
-      padding-top: 0; } }
+      padding: 10rem 7.5rem; } }
+  @media only screen and (max-width: 500px) {
+    .way {
+      padding: 7.5rem 5rem; } }
   @media only screen and (max-width: 400px) {
     .way {
-      padding: 3rem; } }
+      padding: 5rem 3rem; } }
   .way__header {
     margin-bottom: 5rem;
     display: flex;
