--- a/src/client/scss/base/_typography.scss
+++ b/src/client/scss/base/_typography.scss
@@ -23,7 +23,7 @@
     font-family: $font-kalam;
     line-height: 5rem;
 
-    @media screen and (max-width: 800px) {
+    @media screen and (max-width: 850px) {
         font-size: 3rem;
         line-height: 4rem;
     }
@@ -36,7 +36,11 @@
 }
 .heading-4 {
     font-size: 2rem;
-    font-weight: bold;
+    font-weight: normal;
+
+    &--bold {
+        font-weight: bold;
+    }
 
     @media screen and (max-width: 1100px) {
         font-size: 2rem;
