--- a/src/client/scss/sections/_organizations.scss
+++ b/src/client/scss/sections/_organizations.scss
@@ -93,14 +93,14 @@
         }
     }
     & .heading-4 {
+        text-align: center;
+
         position: relative;
         z-index: 2;
     }
     &__bg {
         height: 40rem;
         background: $color-green;
-        //opacity: 0.1;
-        clip-path: url(#organizations-clip-path);
 
         @media screen and (max-width: 500px) {
             height: 33rem;
@@ -116,47 +116,36 @@
         @media only screen and (max-width: 1400px) {
             padding: 0 15rem;
         }
+        @media only screen and (max-width: 1100px) {
+            padding: 0 10rem;
+            
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: center;
+        }
         @media screen and (max-width: $bp-organizations-mobile) {
-            margin-top: 0;
-            padding-top: 20rem;
-            height: 55rem;
-
             position: relative;
         }
-        @media screen and (max-width: 400px) {
-           padding-top: 10rem;
+        @media screen and (max-width: 500px) {
+            padding: 0;
         }
 
     }
     &__organization {
         width: 25rem;
 
+        flex-shrink: 0;
         display: flex;
         flex-direction: column;
         align-items: center;
 
         position: relative;
 
-        @media screen and (max-width: $bp-organizations-mobile) {
-            height: 10rem;
-            width: 25rem;
-            
-            &:first-of-type {
-                position: absolute;
-                top: 35rem;
-            }
+        @media only screen and (max-width: 1100px) {
+            margin-bottom: 3rem;
         }
         @media screen and (max-width: 500px) {
             height: 10rem;
-        }
-        @media screen and (max-width: 400px) {
-            height: 10rem;
-            width: 20rem;
-
-            &:first-of-type {
-                position: absolute;
-                top: 23rem;
-            }
         }
 
         &:hover {
