--- a/src/client/scss/sections/_topics.scss
+++ b/src/client/scss/sections/_topics.scss
@@ -1,7 +1,6 @@
 .topics {
     width: 100vw;
     height: auto;
-    overflow: hidden;
 
     display: flex;
     flex-direction: row;
@@ -15,22 +14,17 @@
     }
     @media only screen and (max-width: 800px) {
         height: auto;
+        padding-right: 0;
 
         flex-direction: column;
         justify-content: center;
-    }
-    @media only screen and (max-width: 650px) {
-        padding: 5rem;
-    }
-    @media only screen and (max-width: 550px) {
-        padding: 2rem;
     }
 
     &__svgTop {
         position: absolute;
     
-        right: 10%;
-        top: -20%;
+        right: 15%;
+        top: -22%;
         z-index: -1;
 
         @media only screen and (max-width: 1400px) {
@@ -52,8 +46,8 @@
     }
     &__svgBottom {
         position: absolute;
-        right: 0;
-        bottom: -35%;
+        right: 3%;
+        bottom: -44%;
         z-index: -1;
 
         @media only screen and (max-width: 1400px) {
@@ -76,6 +70,13 @@
         &__container {
             width: 450px;
             flex-shrink: 0;
+
+            @media only screen and (max-width: 1100px) {
+                width: 298px;
+            }
+            @media only screen and (max-width: 800px) {
+                display: none;
+            }
         }
 
         &__regular {
@@ -83,11 +84,7 @@
             height: 100%;
 
             object-fit: cover;
-
-            @media only screen and (max-width: 1200px) {
-                width: 35rem;
-                height: 60rem;
-            }
+            
             @media only screen and (max-width: 800px) {
                 display: none;
             }
@@ -98,6 +95,9 @@
         &__mobile {
             height: 100vw;
             transform: rotate(270deg);
+            transform-origin: center center;
+
+            object-fit: cover;
 
             @media only screen and (min-width: 801px) {
                 display: none;
@@ -108,14 +108,23 @@
         width: 100%;
         margin: 15rem 10rem;
 
-        @media only screen and (max-width: 1050px) {
-            padding-left: 5rem;
+        @media only screen and (max-width: 1350px) {
+            margin: 10rem;
+        }
+        @media only screen and (max-width: 1100px) {
+            margin: 0 5rem;
         }
         @media only screen and (max-width: 800px) {
             width: 100%;
-            padding: 5rem;
-
+            padding: 10rem 7.5rem;
+            margin: 0;
             overflow-wrap: normal;
+        }
+        @media only screen and (max-width: 500px) {
+            padding: 7.5rem 5rem;
+        }
+        @media only screen and (max-width: 400px) {
+            padding: 5rem 3rem;
         }
         @media only screen and (-ms-high-contrast: none), (-ms-high-contrast: active) {
             width: 100rem;
