--- a/src/client/scss/sections/_way.scss
+++ b/src/client/scss/sections/_way.scss
@@ -4,18 +4,21 @@
     overflow: hidden;
 
     position: relative;
-    overflow: hidden;
 
-    @media only screen and (max-width: 1200px) {
-        padding: 10rem;
-        padding-top: 0;
+    @media only screen and (max-width: 1450px) {
+        padding: 15rem;
+    }
+    @media only screen and (max-width: 1450px) {
+        padding: 15rem 10rem;
     }
     @media only screen and (max-width: 800px) {
-        padding: 5rem;
-        padding-top: 0;
+        padding: 10rem 7.5rem;
+    }
+    @media only screen and (max-width: 500px) {
+        padding: 7.5rem 5rem;
     }
     @media only screen and (max-width: 400px) {
-        padding: 3rem;
+        padding: 5rem 3rem;
     }
 
     &__header {
